# voting-application

./: .env  Cargo.toml  README.md  compose.yaml
.github/workflows/: build_and_test.yml  main.yml
polling-backend/: .env.example  Cargo.toml  Dockerfile
polling-backend/src/: config.rs  lib.rs  routes.rs  state.rs  websocket.rs
polling-backend/src/handlers/: poll.rs
polling-backend/src/models/: user.rs
polling-backend/tests/: test.rs
polling-frontend/: Dockerfile  compose.yaml  next.config.ts  package.json  tailwind.config.ts
polling-frontend/app/: clientLayout.tsx  globals.css  layout.tsx  middleware.ts  page.tsx
polling-frontend/app/_components/: Button.tsx  CreatePollForm.tsx  Navigation.tsx  PollCard.tsx  PollFilters.tsx  SearchPolls.tsx  VoteButton.tsx
polling-frontend/app/_components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  radio-group.tsx  toast.tsx
polling-frontend/app/_hooks/: use-toast.ts
polling-frontend/app/_lib/: api.ts  utils.ts
polling-frontend/app/_services/: websocket.ts
polling-frontend/app/_store/: pollStore.ts  store.ts
polling-frontend/app/home/: page.tsx
polling-frontend/app/lib/: api.ts  utils.ts
polling-frontend/app/login/: page.tsx
polling-frontend/app/polls/: page.tsx
polling-frontend/app/polls/[id]/: page.tsx
polling-frontend/app/polls/manage/: page.tsx
polling-frontend/app/register/: page.tsx
polling-frontend/types/: poll.ts
src/: error.rs  main.rs  routes.rs  startup.rs  websocket.rs
src/handlers/: auth.rs  mod.rs  poll.rs
src/models/: poll.rs
(+2 files in other folders)
